--- a/client/package.json
+++ b/client/package.json
@@ -36,5 +36,8 @@
     ]
   },
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mini-css-extract-plugin": "2.4.5"
+  }
 }
